--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,9 @@
                 
                 // 自定义颜色 (类似 GitHub 风格)
                 legendColors: {
-                    min: "#ebedf0",   // 0字 (灰色)
-                    max: "#216e39",   // 最深绿
-                    empty: "#ebedf0"  // 无数据
+                    min: "#9be9a8",   // <--- 修改这里！把之前的灰色改成浅绿色
+                    max: "#216e39",   // 深绿色
+                    empty: "#ebedf0"  // 没数据的日子显示灰色
                 },
 
                 // 鼠标悬停提示
@@ -102,3 +102,4 @@
     </script>
 </body>
 </html>
+
