--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cal-heatmap/cal-heatmap.css" />
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 20px;
-            /* 居中显示 */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        #cal-heatmap {
-            /* 避免宽度太窄 */
-            min-width: 800px; 
         }
     </style>
 </head>
@@ -102,4 +93,5 @@
     </script>
 </body>
 </html>
+
 
