--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            justify-content: flex-start; /* 靠左 */
+            align-items: flex-start;     /* 靠上 */
+            padding: 20px;               /* 建议加一点点边距，不然贴着边缘太挤了 */
         }
         
         #cal-heatmap {
